@@ -233,7 +233,7 @@ ROM_START(name) \
 
 #define PLAYMATIC_SOUNDROMZ(n1, chk1) \
   SOUNDREGION(0x10000, PLAYMATIC_MEMREG_SCPU) \
-    ROM_LOAD(n1, 0x0000, 0x0400, chk1)
+    ROM_LOAD(n1, 0x0000, 0x0800, chk1)
 
 #define PLAYMATIC_SOUNDROM64(n1, chk1) \
   SOUNDREGION(0x10000, PLAYMATIC_MEMREG_SCPU) \
